[package]
name = "brainfuck_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Leonard Schüngel"]
description = "A Brainfuck compiler that compiles to rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
